feat: enhance bed management with file upload functionality, improve UI for bed type creation and editing, and add preview feature for icons